--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 							<i class="fa fa-check-square-o"></i>
 							<div class="padding-left">
 								<h4>其它</h4>
-								<p>懂网站性能优化，网站百度排名和SEO优化，熟练使用photoshop等切图工具，会常见的UI技巧，懂Java，php等后台语言开发.</p>
+								<p>了解网站性能优化，网站百度排名和SEO优化，会使用Java等后台语言实现数据库的增删改查，简单使用photoshop等工具.</p>
 							</div>
 						</div>
 					</div>
@@ -349,10 +349,10 @@
 				<div id="row">
 
 					<div class="col-md-3 col-sm-6">
-						<div class="thumbnail"> <img src="img/team/02.jpg" alt="浙江理工大学" class="img-circle team-img">
+						<div class="thumbnail"> <img src="img/team/02.jpg" alt="湖南涉外经济学院" class="img-circle team-img">
 							<div class="caption">
-								<h3>浙江理工大学</h3>
-								<p>电子信息工程</p>
+								<h3>湖南涉外经济学院</h3>
+								<p>软件工程</p>
 								<p>主要学习编程语言，前端技术，网站制作和开发，大学期间做过很多项目，很喜欢编程</p>
 							</div>
 						</div>
