--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 		<meta name="description" content="个人简历描述">
 		<meta name="keywords" content="关键词" />
 
-		<!-- Favicons
-    ================================================== -->
+		<!-- Favicons-->
 
 		<link rel="shortcut icon" href="img/favicon_jianli.ico" type="image/x-icon">
 
@@ -17,18 +16,15 @@
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="fonts/font-awesome/css/font-awesome.css">
 
-		<!-- Slider
-    ================================================== -->
+		<!-- Slider-->
 		<link href="css/owl.carousel.css" rel="stylesheet" media="screen">
 		<link href="css/owl.theme.css" rel="stylesheet" media="screen">
 
-		<!-- Stylesheet
-    ================================================== -->
+		<!-- Stylesheet -->
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel="stylesheet" type="text/css" href="css/prettyPhoto.css">
 
 		<link rel="stylesheet" type="text/css" href="fonts/sns_fonts/iconfont.css">
-
 
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
